--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,59 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Sampletown Chamber Directory</title>
-  <meta name="description" content="Member directory for the Sampletown Chamber of Commerce">
+  <meta name="description" content="Member directory for the Sampletown Chamber of Commerce, featuring trusted local businesses.">
   <meta name="author" content="Meline Levao">
 
-  <!-- Favorite Icon -->
-  <link rel="icon" href="images/favicon.ico">
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Sampletown Chamber Commerce">
+  <!-- Open Graph / Social Sharing -->
+  <meta property="og:title" content="Sampletown Chamber of Commerce">
   <meta property="og:description" content="Explore trusted local businesses in Sampletown.">
   <meta property="og:image" content="images/social-banner.jpg">
   <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/directory.html">
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.ico">
+
+  <!-- Google Fonts preconnect and stylesheet -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-  <!-- CSS -->
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 
 <header>
-  <h1>Sampletown Chamber Directory</h1>
+  <h2>Sampletown Chamber of Commerce</h2>
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="directory.html">Directory</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="index.html" title="Home page">Home</a></li>
+      <li><a href="directory.html" title="Member directory">Directory</a></li>
+      <li><a href="contact.html" title="Contact us">Contact</a></li>
     </ul>
   </nav>
 </header>
 
 <main>
-  <!-- H1 is the first element here as required -->
+  <h1>Sampletown Chamber Directory</h1>
 
-  <!-- View Toggle Buttons -->
+  <!-- Member listing and toggle buttons go here -->
+  <section id="members" class="grid-view" aria-label="Member directory list/grid"></section>
+
   <div class="view-toggle" role="group" aria-label="Toggle directory view">
     <button id="gridViewBtn" aria-pressed="true">Grid View</button>
     <button id="listViewBtn" aria-pressed="false">List View</button>
   </div>
-
-  <!-- Members Section -->
-  <section id="members" class="grid-view"></section>
 </main>
 
 <footer>
-  <p>© <span id="currentYear"></span> Meline Levao | All rights reserved</p>
-  <p>Last Modified: <span id="lastModified"></span></p>
+  <p>&copy; <span id="currentYear"></span> Sampletown Chamber of Commerce | Last Updated: <span id="lastModified"></span></p>
 </footer>
 
 <script src="scripts/directory.js"></script>
+
 </body>
 </html>
