--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,80 +1,91 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-  <title>Sampletown Chamber of Commerce - Home</title>
-  <meta name="description" content="Welcome to the Sampletown Chamber of Commerce. Join us to discover local business events, member spotlights, and community highlights." />
-  <meta name="author" content="Meline Levao" />
+  <title>Sampletown Chamber Home - Welcome to Local Business Community</title>
+  <meta name="description" content="Welcome to Sampletown Chamber of Commerce. Join us and discover local business events and highlights.">
+  <meta name="author" content="Meline Levao">
 
   <!-- Open Graph / Social Sharing -->
-  <meta property="og:title" content="Sampletown Chamber of Commerce" />
-  <meta property="og:description" content="Join Sampletown Chamber of Commerce and explore local businesses and events." />
-  <meta property="og:image" content="images/social-banner.jpg" />
-  <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/index.html" />
+  <meta property="og:title" content="Sampletown Chamber Home">
+  <meta property="og:description" content="Join Sampletown Chamber of Commerce and explore local businesses and events.">
+  <meta property="og:image" content="images/social-banner.jpg">
+  <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/index.html">
 
   <!-- Favicon -->
-  <link rel="icon" href="images/favicon.ico" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <!-- Google Fonts preconnect and stylesheet -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="styles/normalize.css" />
-  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-  <header>
-    <h2>Sampletown Chamber of Commerce</h2>
-    <nav>
-      <ul>
-        <li><a href="index.html" title="Home page">Home</a></li>
-        <li><a href="directory.html" title="Member directory">Directory</a></li>
-        <li><a href="contact.html" title="Contact us">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
-    <h1>Welcome to the Sampletown Chamber of Commerce</h1>
+<header>
+  <h2>Sampletown Chamber of Commerce</h2>
+  <nav>
+    <ul>
+      <li><a href="index.html" title="Home page">Home</a></li>
+      <li><a href="directory.html" title="Member directory">Directory</a></li>
+      <li><a href="contact.html" title="Contact us">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
-    <section class="hero">
-      <img src="images/social-banner.jpg" alt="Sampletown Chamber of Commerce building" />
-      <p>Join us and discover the vibrant local business community in Sampletown.</p>
-      <a href="join.html" class="cta-button" title="Join the chamber of commerce">Join the Chamber</a>
-    </section>
+<main>
+  <h1>Welcome to the Sampletown Chamber of Commerce</h1>
 
-    <section class="current-events">
-      <h2>Current Events</h2>
-      <ul>
-        <li>Community Business Expo - September 25</li>
-        <li>Networking Breakfast - October 3</li>
-        <li>Annual Gala - November 12</li>
-      </ul>
-    </section>
+  <!-- Hero Image -->
+  <section class="hero">
+    <img src="images/hero-image.jpg" alt="Downtown Sampletown, community event happening" />
+  </section>
 
-    <section class="weather">
-      <h2>Current Weather</h2>
-      <div id="weather-container">
-        <!-- Weather info populated by JavaScript -->
-      </div>
-    </section>
+  <!-- Call to Action -->
+  <section class="call-to-action">
+    <p>Join the Sampletown Chamber of Commerce to support local businesses and community growth.</p>
+    <a href="join.html" class="btn">Join Now</a>
+  </section>
 
-    <section class="spotlights">
-      <h2>Member Spotlights</h2>
-      <div id="spotlights" class="spotlight-container">
-        <!-- Spotlight members populated by JavaScript -->
-      </div>
-    </section>
-  </main>
+  <!-- Current Events Section -->
+  <section class="events" aria-label="Current events in Sampletown">
+    <h2>Upcoming Events</h2>
+    <ul>
+      <li>Community Picnic - October 15</li>
+      <li>Small Business Expo - November 5</li>
+      <li>Holiday Parade - December 12</li>
+    </ul>
+  </section>
 
-  <footer>
-    <p>&copy; <span id="currentYear"></span> Sampletown Chamber of Commerce | Last Updated: <span id="lastModified"></span></p>
-  </footer>
+  <!-- Weather Section -->
+  <section class="weather" aria-label="Sampletown weather forecast">
+    <h2>Current Weather</h2>
+    <div id="weather-container">
+      <!-- Weather data populated by JS -->
+    </div>
+  </section>
 
-  <script src="scripts/index.js"></script>
+  <!-- Spotlight Section -->
+  <section class="spotlights" aria-label="Member spotlights">
+    <h2>Member Spotlights</h2>
+    <div id="spotlight-container">
+      <!-- Spotlight member cards populated by JS -->
+    </div>
+  </section>
+</main>
+
+<footer>
+  <p>&copy; <span id="currentYear"></span> Sampletown Chamber of Commerce | Last Updated: <span id="lastModified"></span></p>
+</footer>
+
+<script src="scripts/home.js"></script>
+
 </body>
 </html>
+
