--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,7 +11,7 @@
   <!-- Open Graph / Social Sharing -->
   <meta property="og:title" content="Sampletown Chamber of Commerce" />
   <meta property="og:description" content="Explore trusted local businesses in Sampletown." />
-  <meta property="og:image" content="images/social-banner.jpg" />
+  <meta property="og:image" content="images/social-banner.png" />
   <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/directory.html" />
 
   <!-- Favicon -->
@@ -58,4 +58,3 @@
   <script src="scripts/directory.js"></script>
 </body>
 </html>
-
