--- a/chamber/index.html
+++ b/chamber/index.html
@@ -2,93 +2,10 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Sampletown Chamber Home</title>
-  <meta name="description" content="Welcome to Sampletown Chamber of Commerce. Join us and discover local business events and highlights.">
-  <meta name="author" content="Meline Levao">
-
-  <!-- Open Graph / Social Sharing -->
-  <meta property="og:title" content="Sampletown Chamber of Commerce">
-  <meta property="og:description" content="Join Sampletown Chamber of Commerce and explore local businesses and events.">
-  <meta property="og:image" content="images/social-banner.jpg">
-  <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/index.html">
-
-  <!-- Favicon -->
-  <link rel="icon" href="images/favicon.ico">
-
-  <!-- Google Fonts preconnect and stylesheet -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/styles.css">
+  <meta http-equiv="refresh" content="0; URL=directory.html">
+  <title>Sampletown Chamber</title>
 </head>
 <body>
-
-<header>
-  <h2>Sampletown Chamber of Commerce</h2>
-  <nav>
-    <ul>
-      <li><a href="index.html" title="Home page">Home</a></li>
-      <li><a href="directory.html" title="Member directory">Directory</a></li>
-      <li><a href="contact.html" title="Contact us">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-
-<main>
-  <h1>Welcome to the Sampletown Chamber of Commerce</h1>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <img src="images/hero.jpg" alt="Scenic view of Sampletown" />
-    <p>Your gateway to trusted local businesses and community events.</p>
-    <a href="join.html" class="cta-button" title="Join the Chamber of Commerce">Join the Chamber</a>
-  </section>
-
-  <!-- Current Events -->
-  <section class="events" aria-label="Current events">
-    <h2>Current Events</h2>
-    <ul>
-      <li>Annual Business Expo - October 10</li>
-      <li>Local Food Festival - November 15</li>
-      <li>Holiday Parade - December 5</li>
-    </ul>
-  </section>
-
-  <!-- Weather Section -->
-  <section class="weather" aria-label="Current weather and forecast">
-    <h2>Weather</h2>
-    <div id="weatherData">
-      <!-- JavaScript will populate this -->
-    </div>
-  </section>
-
-  <!-- Spotlight Section -->
-  <section class="spotlights" aria-label="Featured member businesses">
-    <h2>Member Spotlights</h2>
-    <div id="spotlights">
-      <!-- JavaScript will populate this -->
-    </div>
-  </section>
-</main>
-
-<footer>
-  <p>&copy; <span id="currentYear"></span> Sampletown Chamber of Commerce | Last Updated: <span id="lastModified"></span></p>
-</footer>
-
-<script src="scripts/home.js"></script>
-<script src="scripts/spotlights.js"></script>
-<script src="scripts/weather.js"></script>
-
-<script>
-  // Set current year and last modified date dynamically
-  document.getElementById('currentYear').textContent = new Date().getFullYear();
-  document.getElementById('lastModified').textContent = document.lastModified;
-</script>
-
+  <p>If you are not redirected, <a href="directory.html">go to Directory</a>.</p>
 </body>
 </html>
