Add chamber directory page with dynamic member list and view toggle functionality

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,7 +32,7 @@
     <nav>
       <ul>
         <li><a href="index.html" title="Home page">Home</a></li>
-        <li><a href="directory.html" title="Member directory">Directory</a></li>
+        <li><a href="directory.html" title="Member directory" aria-current="page">Directory</a></li>
         <li><a href="contact.html" title="Contact us">Contact</a></li>
       </ul>
     </nav>
