Add homepage structure for Sampletown Chamber with hero, events, weather, and spotlight sections

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sampletown Chamber Home</title>
   <meta name="description" content="Welcome to Sampletown Chamber of Commerce. Join us and discover local business events and highlights." />
-  <meta name="author" content="Your Name" />
+  <meta name="author" content="Meline Levao" />
   
   <!-- Open Graph -->
   <meta property="og:title" content="Sampletown Chamber of Commerce" />
   <meta property="og:description" content="Join Sampletown Chamber of Commerce and explore local businesses and events." />
-  <meta property="og:image" content="images/social-banner.jpg" />
-  <meta property="og:url" content="https://your-github-username.github.io/wdd231/chamber/index.html" />
+  <meta property="og:image" content="chamber/images/social-banner.jpg" />
+  <meta property="og:url" content="https://mline03.github.io/wdd231/index.html" />
   
-  <link rel="icon" href="images/favicon.ico" />
+  <link rel="icon" href="chamber/images/favicon.ico" />
   
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,8 +21,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   
   <!-- CSS -->
-  <link rel="stylesheet" href="styles/normalize.css" />
-  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="stylesheet" href="chamber/styles/normalize.css" />
+  <link rel="stylesheet" href="chamber/styles/styles.css" />
 </head>
 <body>
   <header>
@@ -30,8 +30,8 @@
     <nav>
       <ul>
         <li><a href="index.html" title="Home page">Home</a></li>
-        <li><a href="directory.html" title="Member directory">Directory</a></li>
-        <li><a href="contact.html" title="Contact us">Contact</a></li>
+        <li><a href="chamber/directory.html" title="Member directory">Directory</a></li>
+        <li><a href="chamber/contact.html" title="Contact us">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -39,11 +39,11 @@
   <main>
     <!-- Hero Section -->
     <section class="hero">
-      <img src="images/hero.jpg" alt="Sampletown cityscape" />
+      <img src="chamber/images/hero.jpg" alt="Sampletown cityscape" />
       <div class="hero-content">
         <h1>Welcome to the Sampletown Chamber of Commerce</h1>
         <p>Connecting local businesses and the community.</p>
-        <a href="join.html" class="cta-button" title="Join the Chamber of Commerce">Join the Chamber</a>
+        <a href="chamber/join.html" class="cta-button" title="Join the Chamber of Commerce">Join the Chamber</a>
       </div>
     </section>
     
@@ -75,6 +75,6 @@
     <p>&copy; <span id="currentYear"></span> Sampletown Chamber of Commerce | Last Updated: <span id="lastModified"></span></p>
   </footer>
 
-  <script src="scripts/index.js"></script>
+  <script src="chamber/scripts/index.js"></script>
 </body>
 </html>
