--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,172 +1,210 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Join the Chamber</title>
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-    /* Basic styling and animation */
-    .membership-cards {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Join the Chamber of Commerce - Become a Member Today</title>
+  <meta name="description" content="Apply to become a member of the Chamber of Commerce. Choose from various membership levels and enjoy exclusive benefits." />
+  <meta name="author" content="meline levao" />
 
-    @media (min-width: 768px) {
-      .form-container {
-        display: flex;
-        gap: 2rem;
-        align-items: flex-start;
-      }
-      .membership-cards {
-        flex-direction: column;
-        width: 300px;
-      }
-    }
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 
-    .card {
-      border: 1px solid #ccc;
-      padding: 1rem;
-      border-radius: 8px;
-      animation: fadeSlideIn 1s ease forwards;
-      opacity: 0;
-    }
+  <!-- Open Graph -->
+  <meta property="og:title" content="Join the Chamber of Commerce" />
+  <meta property="og:description" content="Become a member of the Chamber and enjoy exclusive benefits and networking opportunities." />
+  <meta property="og:image" content="images/og-image.png" />
+  <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/join.html" />
 
-    .card:nth-child(1) { animation-delay: 0.1s; }
-    .card:nth-child(2) { animation-delay: 0.2s; }
-    .card:nth-child(3) { animation-delay: 0.3s; }
-    .card:nth-child(4) { animation-delay: 0.4s; }
-
-    @keyframes fadeSlideIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    dialog {
-      padding: 1rem;
-      border: none;
-      border-radius: 8px;
-      max-width: 400px;
-    }
-  </style>
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
+
 <body>
   <header>
-    <h1>Join the Chamber of Commerce</h1>
+    <h2>Chamber of Commerce</h2>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="join.html" aria-current="page">Join</a></li>
+        <li><a href="members.html">Members</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </header>
-  <main>
-    <div class="form-container">
-      <form method="get" action="thankyou.html">
-        <label>
-          First Name:
-          <input type="text" name="firstName" title="Enter your first name" required autocomplete="given-name" />
-        </label>
-        <br />
-        <label>
-          Last Name:
-          <input type="text" name="lastName" title="Enter your last name" required autocomplete="family-name" />
-        </label>
-        <br />
-        <label>
-          Organizational Title:
-          <input type="text" name="orgTitle" title="Your title in the organization" autocomplete="organization-title" pattern="[A-Za-z\- ]{7,}" />
-        </label>
-        <br />
-        <label>
-          Email:
-          <input type="email" name="email" title="Enter your email address" placeholder="you@example.com" required autocomplete="email" />
-        </label>
-        <br />
-        <label>
-          Mobile Phone:
-          <input type="tel" name="phone" title="Enter your mobile phone number" required autocomplete="tel" />
-        </label>
-        <br />
-        <label>
-          Organization Name:
-          <input type="text" name="organization" title="Your business/organization name" required autocomplete="organization" />
-        </label>
-        <br />
-        <label>
-          Membership Level:
-          <select name="membership" required>
-            <option value="">Select a level</option>
-            <option value="np">NP Membership</option>
-            <option value="bronze">Bronze Membership</option>
-            <option value="silver">Silver Membership</option>
-            <option value="gold">Gold Membership</option>
-          </select>
-        </label>
-        <br />
-        <label>
-          Organization Description:
-          <textarea name="description" title="Describe your organization"></textarea>
-        </label>
-        <br />
-        <input type="hidden" name="timestamp" id="timestamp" />
-        <input type="submit" value="Join Now" />
-      </form>
 
-      <!-- Membership Cards -->
-      <div class="membership-cards">
-        <div class="card">
-          <h3>NP Membership</h3>
-          <p>No fees for nonprofits</p>
-          <a href="#" onclick="document.getElementById('modal-np').showModal()">More Info</a>
-        </div>
-        <div class="card">
-          <h3>Bronze Membership</h3>
-          <p>Basic benefits for small businesses</p>
-          <a href="#" onclick="document.getElementById('modal-bronze').showModal()">More Info</a>
-        </div>
-        <div class="card">
-          <h3>Silver Membership</h3>
-          <p>Increased exposure & event discounts</p>
-          <a href="#" onclick="document.getElementById('modal-silver').showModal()">More Info</a>
-        </div>
-        <div class="card">
-          <h3>Gold Membership</h3>
-          <p>Premium benefits & advertising</p>
-          <a href="#" onclick="document.getElementById('modal-gold').showModal()">More Info</a>
-        </div>
-      </div>
-    </div>
+  <main>
+    <h1>Join the Chamber of Commerce</h1>
+
+    <!-- Membership Application Form -->
+    <form action="thankyou.html" method="get" novalidate>
+      <label>
+        First Name
+        <input
+          type="text"
+          name="firstName"
+          title="Enter your first name"
+          autocomplete="given-name"
+          required
+        />
+      </label>
+
+      <label>
+        Last Name
+        <input
+          type="text"
+          name="lastName"
+          title="Enter your last name"
+          autocomplete="family-name"
+          required
+        />
+      </label>
+
+      <label>
+        Organizational Title
+        <input
+          type="text"
+          name="orgTitle"
+          title="Your job title within your organization"
+          autocomplete="organization-title"
+          pattern="^[A-Za-z\s\-]{7,}$"
+          placeholder="e.g., Marketing Manager"
+        />
+      </label>
+
+      <label>
+        Email Address
+        <input
+          type="email"
+          name="email"
+          title="Enter your email address"
+          autocomplete="email"
+          placeholder="example@example.com"
+          required
+        />
+      </label>
+
+      <label>
+        Mobile Phone Number
+        <input
+          type="tel"
+          name="mobile"
+          title="Enter your mobile phone number"
+          autocomplete="tel"
+          required
+        />
+      </label>
+
+      <label>
+        Business / Organization Name
+        <input
+          type="text"
+          name="businessName"
+          title="Enter your business or organization name"
+          autocomplete="organization"
+          required
+        />
+      </label>
+
+      <label>
+        Membership Level
+        <select name="membershipLevel" title="Select membership level" required>
+          <option value="" disabled selected>Select a level</option>
+          <option value="np">NP Membership (No Fee)</option>
+          <option value="bronze">Bronze Membership</option>
+          <option value="silver">Silver Membership</option>
+          <option value="gold">Gold Membership</option>
+        </select>
+      </label>
+
+      <label>
+        Business / Organization Description
+        <textarea
+          name="businessDescription"
+          title="Describe your business or organization"
+          rows="5"
+        ></textarea>
+      </label>
+
+      <input
+        type="hidden"
+        id="timestamp"
+        name="timestamp"
+        value=""
+      />
+
+      <input type="submit" value="Join Now" />
+    </form>
+
+    <!-- Membership Level Cards -->
+    <section class="membership-cards" aria-label="Membership Levels">
+      <article class="card np">
+        <h3>NP Membership</h3>
+        <p>Non-profit organizations, no fee.</p>
+        <a href="#modal-np" aria-haspopup="dialog" role="button">More Info</a>
+      </article>
+      <article class="card bronze">
+        <h3>Bronze Membership</h3>
+        <p>Basic membership with essential benefits.</p>
+        <a href="#modal-bronze" aria-haspopup="dialog" role="button">More Info</a>
+      </article>
+      <article class="card silver">
+        <h3>Silver Membership</h3>
+        <p>Includes advertising and event discounts.</p>
+        <a href="#modal-silver" aria-haspopup="dialog" role="button">More Info</a>
+      </article>
+      <article class="card gold">
+        <h3>Gold Membership</h3>
+        <p>All benefits plus premium advertising and training.</p>
+        <a href="#modal-gold" aria-haspopup="dialog" role="button">More Info</a>
+      </article>
+    </section>
 
     <!-- Modals -->
-    <dialog id="modal-np">
-      <h3>NP Membership</h3>
-      <p>Free for all nonprofit organizations. Includes basic listing and invitations to events.</p>
+    <dialog id="modal-np" aria-labelledby="np-title" aria-modal="true">
+      <h2 id="np-title">NP Membership Benefits</h2>
+      <p>No fee for nonprofit organizations. Access to community events.</p>
       <button onclick="document.getElementById('modal-np').close()">Close</button>
     </dialog>
 
-    <dialog id="modal-bronze">
-      <h3>Bronze Membership</h3>
-      <p>$100/year. Includes all NP benefits, plus access to training sessions and monthly newsletters.</p>
+    <dialog id="modal-bronze" aria-labelledby="bronze-title" aria-modal="true">
+      <h2 id="bronze-title">Bronze Membership Benefits</h2>
+      <p>Basic member events, newsletter mentions, and website listing.</p>
       <button onclick="document.getElementById('modal-bronze').close()">Close</button>
     </dialog>
 
-    <dialog id="modal-silver">
-      <h3>Silver Membership</h3>
-      <p>$250/year. Includes Bronze benefits, discounted event tickets, and social media shoutouts.</p>
+    <dialog id="modal-silver" aria-labelledby="silver-title" aria-modal="true">
+      <h2 id="silver-title">Silver Membership Benefits</h2>
+      <p>Advertising spots, event discounts, and training sessions.</p>
       <button onclick="document.getElementById('modal-silver').close()">Close</button>
     </dialog>
 
-    <dialog id="modal-gold">
-      <h3>Gold Membership</h3>
-      <p>$500/year. Includes all benefits, homepage spotlight, and advertising in newsletters.</p>
+    <dialog id="modal-gold" aria-labelledby="gold-title" aria-modal="true">
+      <h2 id="gold-title">Gold Membership Benefits</h2>
+      <p>Premium advertising, spotlight features, training, and special events.</p>
       <button onclick="document.getElementById('modal-gold').close()">Close</button>
     </dialog>
+
   </main>
 
   <footer>
-    <p>&copy; 2025 Chamber of Commerce</p>
+    <p>Copyright © Brigham Young University-Idaho | All rights reserved</p>
   </footer>
 
   <script>
-    // Auto-fill timestamp
-    document.getElementById("timestamp").value = new Date().toISOString();
+    // Set the timestamp hidden input value on page load
+    document.getElementById('timestamp').value = new Date().toISOString();
+
+    // Dialog open/close handling for accessibility
+    document.querySelectorAll('.membership-cards a').forEach(link => {
+      link.addEventListener('click', e => {
+        e.preventDefault();
+        const dialog = document.querySelector(link.getAttribute('href'));
+        if (dialog) {
+          dialog.showModal();
+        }
+      });
+    });
   </script>
 </body>
 </html>
