--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,102 +4,82 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>Join the Chamber of Commerce - Become a Member Today</title>
-  
-  <meta name="description" content="Apply to become a member of the Chamber of Commerce. Choose from various membership levels and enjoy exclusive benefits." />
+  <title>Join the Chamber of Commerce - Membership Application</title>
+  <meta name="description" content="Apply to join the Chamber of Commerce and choose your membership level with exclusive benefits." />
   <meta name="author" content="meline levao" />
   
   <!-- Favicon -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="images/favicon.ico" />
   
-  <!-- Open Graph -->
+  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Join the Chamber of Commerce" />
-  <meta property="og:description" content="Become a member of the Chamber and enjoy exclusive benefits and networking opportunities." />
+  <meta property="og:description" content="Become a member and enjoy exclusive benefits." />
   <meta property="og:image" content="images/og-image.png" />
   <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/join.html" />
-  
-  <!-- External CSS -->
-  <link rel="stylesheet" href="styles/styles.css" />
-</head>
+  <meta property="og:type" content="website" />
 
+  <!-- CSS -->
+  <link rel="stylesheet" href="styles/styles.css" />
+
+</head>
 <body>
   <header>
-    <h2>Chamber of Commerce</h2>
+    <h1>Join the Chamber of Commerce</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="join.html" aria-current="page">Join</a></li>
         <li><a href="directory.html">Directory</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="join.html" aria-current="page">Join</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h1>Join the Chamber of Commerce</h1>
+    <section>
+      <h2>Become a Member</h2>
+      <p>Fill out the form below to join the Chamber and enjoy exclusive member benefits.</p>
 
-    <form method="get" action="thankyou.html" novalidate>
-      <label for="firstName">
-        First Name*
-        <input type="text" id="firstName" name="firstName" required autocomplete="given-name" />
-      </label>
+      <form action="thankyou.html" method="POST" novalidate>
+        <fieldset>
+          <legend>Personal Information</legend>
 
-      <label for="lastName">
-        Last Name*
-        <input type="text" id="lastName" name="lastName" required autocomplete="family-name" />
-      </label>
+          <label for="firstName">First Name:</label>
+          <input type="text" id="firstName" name="firstName" required />
 
-      <label for="orgTitle">
-        Organizational Title
-        <input type="text" id="orgTitle" name="orgTitle" pattern="^[A-Za-z\s-]{7,}$" title="At least 7 letters, spaces or hyphens only" autocomplete="organization-title" />
-      </label>
+          <label for="lastName">Last Name:</label>
+          <input type="text" id="lastName" name="lastName" required />
 
-      <label for="email">
-        Email Address*
-        <input type="email" id="email" name="email" required placeholder="example@example.com" autocomplete="email" />
-      </label>
+          <label for="email">Email Address:</label>
+          <input type="email" id="email" name="email" required />
 
-      <label for="mobile">
-        Mobile Phone Number*
-        <input type="tel" id="mobile" name="mobile" required autocomplete="tel" />
-      </label>
+          <label for="phone">Phone Number:</label>
+          <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required />
+        </fieldset>
 
-      <label for="businessName">
-        Business/Organization Name*
-        <input type="text" id="businessName" name="businessName" required autocomplete="organization" />
-      </label>
+        <fieldset>
+          <legend>Membership Details</legend>
 
-      <label for="membershipLevel">
-        Membership Level*
-        <select id="membershipLevel" name="membershipLevel" required>
-          <option value="" disabled selected>Select a level</option>
-          <option value="NP Membership">NP Membership (Non-Profit, No Fee)</option>
-          <option value="Bronze Membership">Bronze Membership</option>
-          <option value="Silver Membership">Silver Membership</option>
-          <option value="Gold Membership">Gold Membership</option>
-        </select>
-      </label>
+          <label for="membershipLevel">Membership Level:</label>
+          <select id="membershipLevel" name="membershipLevel" required>
+            <option value="">--Select--</option>
+            <option value="gold">Gold</option>
+            <option value="silver">Silver</option>
+            <option value="bronze">Bronze</option>
+          </select>
 
-      <label for="description">
-        Business/Organization Description
-        <textarea id="description" name="description" rows="5"></textarea>
-      </label>
+          <label for="comments">Additional Comments:</label>
+          <textarea id="comments" name="comments" rows="4" placeholder="Any special requests or questions?"></textarea>
 
-      <input type="hidden" name="timestamp" id="timestamp" />
+          <input type="hidden" name="source" value="chamber-join-page" />
+        </fieldset>
 
-      <input type="submit" value="Join Now" />
-    </form>
+        <button type="submit" value="Join Now">Join Now</button>
+      </form>
+    </section>
   </main>
 
   <footer>
     <p>Copyright © Brigham Young University-Idaho | All rights reserved</p>
   </footer>
-
-  <script>
-    // Add timestamp on submit
-    document.querySelector('form').addEventListener('submit', function() {
-      document.getElementById('timestamp').value = new Date().toISOString();
-    });
-  </script>
 </body>
 </html>
