--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; URL=directory.html">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="refresh" content="0; URL=directory.html" />
   <title>Sampletown Chamber</title>
+  <meta name="description" content="Redirecting to the Sampletown Chamber directory page." />
+  <link rel="icon" href="images/favicon.ico" />
 </head>
 <body>
   <p>If you are not redirected, <a href="directory.html">go to Directory</a>.</p>
